zlib-1.2.8/configure.log
--------------------
./configure
2014년 9월 27일 토요일 02시 17분 48초 KST
Checking for gcc...
=== ztest29706.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest29706.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest29706.c ===
int foo() { return 0; }
===
gcc -c -O3 ztest29706.c

Checking for shared library support...
=== ztest29706.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -w -c -O3 -fPIC ztest29706.c
gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8 -O3 -fPIC -o ztest29706.dylib ztest29706.o
Building shared library libz.1.2.8.dylib with gcc.

=== ztest29706.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -O3 -D_LARGEFILE64_SOURCE=1 ztest29706.c
ztest29706.c:2:1: error: unknown type name ‘off64_t’
 off64_t dummy = 0;
 ^
(exit code 1)
Checking for off64_t... No.

=== ztest29706.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -O3 -o ztest29706 ztest29706.c
Checking for fseeko... Yes.

=== ztest29706.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -O3 -o ztest29706 ztest29706.c
Checking for strerror... Yes.

=== ztest29706.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -O3 ztest29706.c
Checking for unistd.h... Yes.

=== ztest29706.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -O3 ztest29706.c
Checking for stdarg.h... Yes.

=== ztest29706.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -O3 ztest29706.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest29706.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -O3 -o ztest29706 ztest29706.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest29706.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -O3 ztest29706.c
Checking for return value of vsnprintf()... Yes.

=== ztest29706.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -O3 ztest29706.c
Checking for attribute(visibility) support... Yes.

ALL = static shared
AR = libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -O3 -DHAVE_HIDDEN
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3 -fPIC -DHAVE_HIDDEN
SHAREDLIB = libz.dylib
SHAREDLIBM = libz.1.dylib
SHAREDLIBV = libz.1.2.8.dylib
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Darwin
--------------------


